[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmodal"
version = "0.1.0.4"
description = "Differentiable Modal Logic for PyTorch — Modal Logical Neural Networks (MLNNs)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Antonin Sulc", email = "asulc@lbl.gov"},
]
keywords = [
    "modal-logic",
    "neurosymbolic",
    "kripke-semantics",
    "differentiable-reasoning",
    "epistemic-logic",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sulcantonin/MLNN_public"
Documentation = "https://github.com/sulcantonin/MLNN_public"
Repository = "https://github.com/sulcantonin/MLNN_public"

[tool.setuptools.packages.find]
include = ["torchmodal*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
